# Superteam-Group-Project

./: .gitignore  README.md  final.py  generate.py  pyproject.toml
chicago_demographic_change/: __main__.py  final.py
chicago_demographic_change/data/: clean_process.py  cleaning.py  column_conversion.py  conversion_dics.py  secondary_source.py  tract_matching.py
chicago_demographic_change/data/clean_data/: README.md  clean_depaul.py  educ_percentage_data.csv  ethnicity_data.csv  (+4 more)
chicago_demographic_change/data_analysis/: README.md  biggest_change.py  demonstration.py  exploring_data.py  geomatching.py
chicago_demographic_change/querying/: APIquery.py  README.md  generate.py
chicago_demographic_change/visualization/: __main__.py  explore.py
data/: README.md  clean_process.py  cleaning.py  combination_dicts.py  conversion_dics.py  percentage.py  secondary_source.py  tract_matching.py
data/clean_data/: age_data.csv  age_percentage_data.csv  clean_depaul.py  educ_data.csv  educ_percentage_data.csv  ethnicity_data.csv  ethnicity_percentage_data.csv  gender_data.csv  gender_percentage_data.csv  household_data.csv  household_percentage_data.csv  income_data.csv  income_percentage_data.csv  race_data.csv  race_percentage_data.csv
data/uncleaned/: README.md
data_analysis/: biggest_change.py  demonstration.py  exploring_data.py  geomatching.py  percentage.py
querying/: APIquery.py  generate.py  querying_constants.py
tests/: README.md
visualization/: README.md  __main__.py  explore.py
visualization/code/: explore.py
visualization/tests/: README.md
(+62 files in other folders)
