[tool.poetry]
name = "chicago_demographic_change"
version = "0.1.0"
description = "repository for superteam's 30122 project"
authors = ["\"Echo Nattinger, Paul Soltys, Dorka Frisch, and Andrew Baker\""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
census = "^0.8.21"
pandas = "^2.2.0"
setuptools = "^69.1.0"
geopandas = "^0.14.3"
seaborn = "^0.13.2"
matplot = "^0.1.9"
lib = "^4.0.0"
matplotlib = "^3.8.3"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
